// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkAction renders with base props 1`] = `
<section
  className="lab-card-link-action lab-card-link-action--normal"
>
  <a
    href="#"
    onClick={[Function]}
  >
    test
  </a>
</section>
`;

exports[`LinkAction renders with href 1`] = `
<section
  className="lab-card-link-action lab-card-link-action--normal"
>
  <a
    href="test"
    onClick={[Function]}
  >
    test
  </a>
</section>
`;

exports[`LinkAction renders with openNewTab 1`] = `
<section
  className="lab-card-link-action lab-card-link-action--normal"
>
  <a
    href="#"
    onClick={[Function]}
    rel="noopener noreferrer"
    target="_blank"
  >
    test
  </a>
</section>
`;

exports[`LinkAction renders with size 1`] = `
<section
  className="lab-card-link-action lab-card-link-action--small"
>
  <a
    href="#"
    onClick={[Function]}
  >
    test
  </a>
</section>
`;
